src/engine/snapshots/monodex__engine__partitioner__tests__generate_patched_file_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 96.0%
Total chunks: 4
Small chunks (<500 chars): 0
Chars: 3071-4141 (mean 3524)

=== CHUNK 1 ===
Breadcrumb: %40rushstack/eslint-patch:generate-patched-file.ts
Type: code
Kind: content
Symbol: None
Lines: 1-91
Size: 3280 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

import fs from 'node:fs';


=== CHUNK 2 ===
Breadcrumb: %40rushstack/eslint-patch:generate-patched-file.ts:generatePatchedLinterJsFileIfDoesNotExist
Type: function
Kind: content
Symbol: Some("generatePatchedLinterJsFileIfDoesNotExist")
Lines: 92-179
Size: 3163 chars
Text preview (5 lines):

  /**
   * Returns index of next public method
   * @param fromIndex - index of inputFile to search if public method still exists
   * @returns -1 if public method does not exist or index of next public method

=== CHUNK 3 ===
Breadcrumb: %40rushstack/eslint-patch:generate-patched-file.ts:generatePatchedLinterJsFileIfDoesNotExist
Type: function
Kind: content
Symbol: Some("generatePatchedLinterJsFileIfDoesNotExist")
Lines: 180-285
Size: 3748 chars
Text preview (5 lines):
  outputFile += `--- END MONKEY PATCH ---
`;

  if (majorVersion >= 9) {
    if (minorVersion >= 37) {

=== CHUNK 4 ===
Breadcrumb: %40rushstack/eslint-patch:generate-patched-file.ts:generatePatchedLinterJsFileIfDoesNotExist
Type: function
Kind: content
Symbol: Some("generatePatchedLinterJsFileIfDoesNotExist")
Lines: 286-399
Size: 4233 chars
Text preview (5 lines):

  outputFile += `
    // --- END MONKEY PATCH ---`;

  //
