src/engine/snapshots/monodex__engine__partitioner__tests__ipackagejson_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 84.4%
Total chunks: 3
Small chunks (<500 chars): 0
Chars: 2826-4030 (mean 3437)

=== CHUNK 1 ===
Breadcrumb: @rushstack/node-core-library:IPackageJson.ts
Type: code
Kind: content
Symbol: None
Lines: 1-135
Size: 4074 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

/**
 * This interface is part of the {@link IPackageJson} file format.  It is used for the

=== CHUNK 2 ===
Breadcrumb: @rushstack/node-core-library:IPackageJson.ts
Type: code
Kind: content
Symbol: None
Lines: 136-235
Size: 2870 chars
Text preview (5 lines):

/**
 * An interface for accessing common fields from a package.json file whose version field may be missing.
 *
 * @remarks

=== CHUNK 3 ===
Breadcrumb: @rushstack/node-core-library:IPackageJson.ts
Type: code
Kind: content
Symbol: None
Lines: 236-338
Size: 3498 chars
Text preview (5 lines):

  /**
   * An array of dependencies that must be installed by a consumer of this package,
   * but which will not be automatically installed by this package.
   */
