src/engine/snapshots/monodex__engine__partitioner__tests__iyaml_api_file_summary.snap
---
source: src/engine/partitioner.rs
assertion_line: 1912
expression: summary
---
=== QUALITY SCORE ===
Score: 100.0%
Total chunks: 4
Small chunks (<500 chars): 0
Chars: 5060-5798 (mean 5368)

=== CHUNK 1 ===
Breadcrumb: @microsoft/api-documenter:IYamlApiFile.ts
Type: code
Kind: content
Symbol: None
Lines: 1-175
Size: 5839 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

/**
 * TypeScript interface describing a Universal Reference YAML documentation file,

=== CHUNK 2 ===
Breadcrumb: @microsoft/api-documenter:IYamlApiFile.ts
Type: code
Kind: content
Symbol: None
Lines: 176-353
Size: 5593 chars
Text preview (5 lines):

  /**
   * The remarks for the item. This value cannot vary by development language.
   * Markdown is permitted.
   *

=== CHUNK 3 ===
Breadcrumb: @microsoft/api-documenter:IYamlApiFile.ts
Type: code
Kind: content
Symbol: None
Lines: 354-557
Size: 5101 chars
Text preview (5 lines):

/**
 * Part of the IYamlApiFile structure.  Documents the source file where an IYamlItem is defined.
 *
 * NOTE: Corresponds to `Microsoft.DocAsCode.DataContracts.Common.SourceDetail` in DocFX.

=== CHUNK 4 ===
Breadcrumb: @microsoft/api-documenter:IYamlApiFile.ts
Type: code
Kind: content
Symbol: None
Lines: 558-750
Size: 5102 chars
Text preview (5 lines):

/**
 * Part of the IYamlApiFile structure.  Used to document exceptions that can be thrown
 * by a method, property, function, or constructor.
 *
