src/engine/snapshots/monodex__engine__partitioner__tests__jsonfile_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 88.3%
Total chunks: 6
Small chunks (<500 chars): 0
Chars: 3051-4046 (mean 3453)

=== CHUNK 1 ===
Breadcrumb: @rushstack/node-core-library:JsonFile.ts
Type: code
Kind: content
Symbol: None
Lines: 1-101
Size: 4086 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

import * as os from 'node:os';


=== CHUNK 2 ===
Breadcrumb: @rushstack/node-core-library:JsonFile.ts
Type: code
Kind: content
Symbol: None
Lines: 102-200
Size: 3555 chars
Text preview (5 lines):

/**
 * Options for {@link JsonFile.parseString}, {@link JsonFile.load}, and {@link JsonFile.loadAsync}.
 *
 * @public

=== CHUNK 3 ===
Breadcrumb: @rushstack/node-core-library:JsonFile.ts
Type: code
Kind: content
Symbol: None
Lines: 201-305
Size: 3245 chars
Text preview (5 lines):

/**
 * Utilities for reading/writing JSON files.
 * @public
 */

=== CHUNK 4 ===
Breadcrumb: @rushstack/node-core-library:JsonFile.ts:JsonFile
Type: class
Kind: content
Symbol: Some("JsonFile")
Lines: 306-395
Size: 3100 chars
Text preview (5 lines):

  /**
   * An async version of {@link JsonFile.loadAndValidateWithCallback}.
   */
  public static async loadAndValidateWithCallbackAsync(

=== CHUNK 5 ===
Breadcrumb: @rushstack/node-core-library:JsonFile.ts:JsonFile
Type: class
Kind: content
Symbol: Some("JsonFile")
Lines: 396-507
Size: 3723 chars
Text preview (5 lines):

  /**
   * Saves the file to disk.  Returns false if nothing was written due to options.onlyIfChanged.
   * @param jsonObject - the object to be saved
   * @param jsonFilename - the file path to write

=== CHUNK 6 ===
Breadcrumb: @rushstack/node-core-library:JsonFile.ts:JsonFile
Type: class
Kind: content
Symbol: Some("JsonFile")
Lines: 508-607
Size: 3275 chars
Text preview (5 lines):

  /**
   * Used to validate a data structure before writing.  Reports an error if there
   * are any undefined members.
   */
