src/engine/snapshots/monodex__engine__partitioner__tests__long_string_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 100.0%
Total chunks: 2
Small chunks (<500 chars): 0
Chars: 4355-4427 (mean 4391)

=== CHUNK 1 ===
Breadcrumb: test:long_string.ts:[fallback-split]
Type: code
Kind: content
Symbol: None
Lines: 1-102
Size: 4391 chars
Text preview (5 lines):
// A file with a very long template string
const longString = `
line1 some content here to make it longer
line2 some content here to make it longer
line3 some content here to make it longer

=== CHUNK 2 ===
Breadcrumb: test:long_string.ts:[fallback-split]
Type: code
Kind: content
Symbol: None
Lines: 103-204
Size: 4463 chars
Text preview (5 lines):
line101 some content here to make it longer
line102 some content here to make it longer
line103 some content here to make it longer
line104 some content here to make it longer
line105 some content here to make it longer
