src/engine/snapshots/monodex__engine__partitioner__tests__parameter_form_large_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 79.4%
Total chunks: 3
Small chunks (<500 chars): 0
Chars: 1943-5151 (mean 3279)

=== CHUNK 1 ===
Breadcrumb: @rushstack/rush-vscode-command-webview:ParameterForm.tsx
Type: code
Kind: content
Symbol: None
Lines: 1-41
Size: 1999 chars
Text preview (5 lines):
// Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT license.
// See LICENSE in the project root for license information.

import * as React from 'react';
import { type CSSProperties, type ReactNode, useCallback, useEffect, useMemo } from 'react';

=== CHUNK 2 ===
Breadcrumb: @rushstack/rush-vscode-command-webview:ParameterForm.tsx
Type: code
Kind: content
Symbol: None
Lines: 42-115
Size: 2800 chars
Text preview (5 lines):

export const ParameterForm = (): React.ReactElement => {
  const commandName: string = useAppSelector((state) => state.parameter.commandName);
  const parameters: ICommandLineParameter[] = useParameters();
  const filteredParameters: ICommandLineParameter[] = useFilteredParameters();

=== CHUNK 3 ===
Breadcrumb: @rushstack/rush-vscode-command-webview:ParameterForm.tsx
Type: variable
Kind: content
Symbol: None
Lines: 116-256
Size: 5207 chars
Text preview (5 lines):

  useEffect(() => {
    if (!userSelectdParameterName) {
      return;
    }
