src/engine/snapshots/monodex__engine__partitioner__tests__simple_function_summary.snap
---
source: src/engine/partitioner.rs
expression: summary
---
=== QUALITY SCORE ===
Score: 100.0%
Total chunks: 1
Small chunks (<500 chars): 1
Chars: 72-72 (mean 72)

=== CHUNK 1 ===
Breadcrumb: %40test/package:test.ts
Type: code
Kind: content
Symbol: None
Lines: 1-4
Size: 95 chars
Text preview (5 lines):

export function add(a: number, b: number): number {
    return a + b;
}
